--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 certifi==2020.12.5
 chardet==4.0.0
 idna==2.10
+lxml==4.6.2
 PyMuPDF==1.18.6
+python-docx==0.8.10
 requests==2.25.1
 urllib3==1.26.2
