--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ certifi==2020.12.5
 chardet==4.0.0
 idna==2.10
 lxml==4.6.3
-PyMuPDF==1.18.9
+ODTtoText==0.0.1
+PyMuPDF==1.18.6
 python-docx==0.8.10
 requests==2.25.1
 urllib3==1.26.4
